shipping cost calculated by city

--- a/public/frontend/css/active-shop.css
+++ b/public/frontend/css/active-shop.css
@@ -8417,10 +8417,10 @@ svg#bigTriangleColor {
 
 @media (min-width: 992px) {
   .dropdown-menu {
-    display: block;
+    /* display: block;
     opacity: 0;
     visibility: hidden;
-    z-index: 1;
+    z-index: 1; */
   }
 
   .dropdown--animated .dropdown-menu {
