--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -4183,3 +4183,6 @@ div[slider] > input[type=range]::-ms-tooltip {
 .responsive-opensec .espace li a i {
   margin-right: 5px;
 }
+.contentRowPadPage {
+  min-height: 250px;
+}
